{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 101,
  "lineage": "6ce4b999-a77f-5b28-6370-a6d02ba5bc11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5c88971c6f9e521",
            "arn": "arn:aws:ec2:us-east-1:396913715368:elastic-ip/eipalloc-0c5c88971c6f9e521",
            "association_id": "eipassoc-0fa41c08f48cdbeec",
            "domain": "vpc",
            "id": "eipalloc-0c5c88971c6f9e521",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0609657487854a899",
            "private_dns": "ip-10-10-0-134.ec2.internal",
            "private_ip": "10.10.0.134",
            "public_dns": "ec2-98-95-255-112.compute-1.amazonaws.com",
            "public_ip": "98.95.255.112",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-nat-eip"
            },
            "tags_all": {
              "Name": "bank-app-eks-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:internet-gateway/igw-0ac8581a7d773396f",
            "id": "igw-0ac8581a7d773396f",
            "owner_id": "396913715368",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-igw"
            },
            "tags_all": {
              "Name": "bank-app-eks-igw"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5c88971c6f9e521",
            "association_id": "eipassoc-0fa41c08f48cdbeec",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08ac01b9ce6e01179",
            "network_interface_id": "eni-0609657487854a899",
            "private_ip": "10.10.0.134",
            "public_ip": "98.95.255.112",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e29074739748ad4",
            "tags": {
              "Name": "bank-app-eks-nat"
            },
            "tags_all": {
              "Name": "bank-app-eks-nat"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:route-table/rtb-0c2764b794fa62cea",
            "id": "rtb-0c2764b794fa62cea",
            "owner_id": "396913715368",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ac01b9ce6e01179",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bank-app-eks-private-rt"
            },
            "tags_all": {
              "Name": "bank-app-eks-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "rtb-0c2764b794fa62cea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:route-table/rtb-014307773be7198e8",
            "id": "rtb-014307773be7198e8",
            "owner_id": "396913715368",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac8581a7d773396f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bank-app-eks-public-rt"
            },
            "tags_all": {
              "Name": "bank-app-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "rtb-014307773be7198e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276f5b6b00b49f40",
            "region": "us-east-1",
            "route_table_id": "rtb-0c2764b794fa62cea",
            "subnet_id": "subnet-0ad0c83635d2648a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc6b8af7f6b5b23",
            "region": "us-east-1",
            "route_table_id": "rtb-0c2764b794fa62cea",
            "subnet_id": "subnet-080ee767b63d29e19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d1cef3f3291dbe8",
            "region": "us-east-1",
            "route_table_id": "rtb-014307773be7198e8",
            "subnet_id": "subnet-04e29074739748ad4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018201c6ef2a67304",
            "region": "us-east-1",
            "route_table_id": "rtb-014307773be7198e8",
            "subnet_id": "subnet-0afc2e261e7eccacc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:subnet/subnet-0ad0c83635d2648a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad0c83635d2648a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913715368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-private-0",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bank-app-eks-private-0",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "subnet-0ad0c83635d2648a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:subnet/subnet-080ee767b63d29e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080ee767b63d29e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913715368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-private-1",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bank-app-eks-private-1",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "subnet-080ee767b63d29e19",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:subnet/subnet-04e29074739748ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e29074739748ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913715368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-public-0",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bank-app-eks-public-0",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "subnet-04e29074739748ad4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:subnet/subnet-0afc2e261e7eccacc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afc2e261e7eccacc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913715368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-public-1",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bank-app-eks-public-1",
              "kubernetes.io/cluster/bank-app-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03ae229da9a847f70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "subnet-0afc2e261e7eccacc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913715368:vpc/vpc-03ae229da9a847f70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-007b0bfba78356152",
            "default_route_table_id": "rtb-059f316159d39949d",
            "default_security_group_id": "sg-03218a0c0d520c4e7",
            "dhcp_options_id": "dopt-02d222949b70c2dc9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ae229da9a847f70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059f316159d39949d",
            "owner_id": "396913715368",
            "region": "us-east-1",
            "tags": {
              "Name": "bank-app-eks-vpc",
              "Owner": "milind"
            },
            "tags_all": {
              "Name": "bank-app-eks-vpc",
              "Owner": "milind"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913715368",
            "id": "vpc-03ae229da9a847f70",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}